2002-04-11  Zack Weinberg  <zack@codesourcery.com>

	* include/rpc/rpc.h (struct rpc_thread_variables): Remove
	authnone_private_s.
	* sunrpc/auth_none.c: Include bits/libc-lock.h.
	Delete #ifdef _RPC_THREAD_SAFE_ block.
	(authnone_private): Make a struct, not a pointer to struct.
	(authnone_private_guard): New once-control variable.
	(authnone_create_once): New function, split out of
	authnone_create.  No need to allocate memory.
	(authnone_create): Just call authnone_create_once via
	__libc_once, then return &authnone_private->no_client.
	(authnone_marshal): Access private data via CLIENT argument,
	not authnone_private pointer.
	Fix typo (MAX_MARSHEL_SIZE -> MAX_MARSHAL_SIZE).
	* sunrpc/rpc_thread.c (__rpc_thread_destroy): No need to free
	authnone_private_s.

2002-04-12  H.J. Lu  <hjl@gnu.org>

	* sunrpc/clnt_raw.c (clntraw_create): Properly set xdrs and client.

2002-04-18  Bruno Haible  <bruno@clisp.org>

	* iconvdata/euc-jisx0213.c (EMIT_SHIFT_TO_INIT, BODY for
	FROM_DIRECTION): Make the FROM direction stateless.
	* iconvdata/shift_jisx0213.c (EMIT_SHIFT_TO_INIT, BODY for
	FROM_DIRECTION): Likewise.

2002-04-15  Bruno Haible  <bruno@clisp.org>

	* iconvdata/JISX0213.TXT: New file.
	* iconvdata/jisx0213.h: New file.
	* iconvdata/jisx0213.c: New file.
	* iconvdata/euc-jisx0213.c: New file.
	* iconvdata/shift_jisx0213.c: New file.
	* iconvdata/gconv-modules (EUC-JISX0213, SHIFT_JISX0213): New modules.
	* iconvdata/EUC-JISX0213.precomposed: New file.
	* iconvdata/SHIFT_JISX0213.precomposed: New file.
	* iconvdata/SHIFT_JISX0213.irreversible: New file.
	* iconvdata/tst-table-to.c (main): Make it work for encodings for
	which the "to" direction is stateful.
	* iconvdata/tst-tables.sh: Add EUC-JISX0213, SHIFT_JISX0213.
	* iconvdata/Makefile (modules): Add libJISX0213, EUC-JISX0213,
	SHIFT_JISX0213.
	(libJISX0213-routines): New variable.
	(LDFLAGS-EUC-JISX0213.so, LDFLAGS-SHIFT_JISX0213.so): New variables.