@@ -56,7 +56,7 @@ configure: configure.in aclocal.m4; $(autoconf-it)
 # These are the targets that are made by making them in each subdirectory.
 +subdir_targets	:= subdir_lib objects objs others subdir_mostlyclean	\
 		   subdir_clean subdir_distclean subdir_realclean	\
-		   tests subdir_lint.out				\
+		   tests xtests subdir_lint.out				\
 		   subdir_distinfo					\
 		   subdir_echo-headers subdir_echo-distinfo		\
 		   subdir_install					\
