@@ -1,4 +1,4 @@
-# Copyright (C) 1991,92,93,94,95,96,97,98,99,2000 Free Software Foundation, Inc.
+# Copyright (C) 1991-2000, 2002 Free Software Foundation, Inc.
 # This file is part of the GNU C Library.
 
 # The GNU C Library is free software; you can redistribute it and/or
@@ -89,18 +89,21 @@ others: $(addprefix $(objpfx),$(extra-objs))
 endif
 ifeq ($(cross-compiling),yes)
 tests: $(addprefix $(objpfx),$(tests) $(test-srcs))
+xtests: tests
 else
 ifeq ($(build-bounded),yes)
 tests-bp.out = $(tests:%=$(objpfx)%-bp.out)
+xtests-bp.out = $(tests:%=$(objpfx)%-bp.out) $(xtests:%=$(objpfx)%-bp.out)
 endif
 tests: $(tests:%=$(objpfx)%.out) $(tests-bp.out)
+xtests: $(tests:%=$(objpfx)%.out) $(xtests:%=$(objpfx)%.out) $(xtests-bp.out)
 endif
 
 ifeq ($(build-programs),yes)
-binaries-all = $(others) $(sysdep-others) $(tests) $(test-srcs)
+binaries-all = $(others) $(sysdep-others) $(tests) $(xtests) $(test-srcs)
 binaries-static = $(others-static) $(tests-static)
 else
-binaries-all = $(tests) $(test-srcs)
+binaries-all = $(tests) $(xtests) $(test-srcs)
 binaries-static =
 endif
 
@@ -121,14 +124,14 @@ $(addprefix $(objpfx),$(binaries-static)): %: %.o \
 endif
 
 ifeq ($(build-bounded),yes)
-binaries-bounded = $(addsuffix -bp,$(tests) $(test-srcs))
+binaries-bounded = $(addsuffix -bp,$(tests) $(xtests) $(test-srcs))
 $(addprefix $(objpfx),$(binaries-bounded)): %-bp: %.ob \
   $(sort $(filter $(common-objpfx)lib%,$(link-libc-bounded))) \
   $(addprefix $(csu-objpfx),start.ob) $(+preinit) $(+postinit)
 	$(+link-bounded)
 endif
 
-ifneq "$(strip $(tests) $(test-srcs))" ""
+ifneq "$(strip $(tests) $(xtests) $(test-srcs))" ""
 # These are the implicit rules for making test outputs
 # from the test programs and whatever input files are present.
 
@@ -242,3 +245,7 @@ ifndef no_deps
 -include $(stdio_lim:h=d)
 endif
 common-generated += bits/stdio_lim.h bits/stdio_lim.d bits/stdio_lim.st
+
+# Local Variables:
+# mode: makefile
+# End:
