@@ -1,4 +1,4 @@
-# Copyright (C) 1994,95,96,97,98,99,2000,2001 Free Software Foundation, Inc.
+# Copyright (C) 1994-2001, 2002 Free Software Foundation, Inc.
 # This file is part of the GNU C Library.
 
 # The GNU C Library is free software; you can redistribute it and/or
@@ -83,6 +83,10 @@ extra-objs = $(rpcgen-objs)
 all: # Make this the default target; it will be defined in Rules.
 
 include ../Makeconfig
+
+ifeq ($(have-thread-library),yes)
+xtests += thrsvc
+endif
 
 ifeq (yes,$(build-static-nss))
 otherlibs += $(nssobjdir)/libnss_files.a $(resolvobjdir)/libnss_dns.a \
@@ -178,3 +182,5 @@ $(objpfx)rpc-proto.c: $(rpcsvc:%=rpcsvc/%)
 	  echo '#include <rpc/rpc.h>'; \
 	  sed -n '/^%#include/s/%//p' $^; } > $@T
 	mv -f $@T $@
+
+$(objpfx)thrsvc: $(shared-thread-library)
